# neptis-server

./: .env  Cargo.toml  Dockerfile  Rocket.toml
action-macro/: Cargo.toml
action-macro/src/: lib.rs
migrations/2025-03-30-155811_test/: down.sql  up.sql
migrations/2025-04-01-193215_test2/: down.sql  up.sql
migrations/2025-04-04-213408_test3/: up.sql
migrations/2025-04-05-201818_test4/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: errors.rs  hash.rs  macros.rs  mod.rs  rolling_secret.rs  traits.rs  util.rs
src/mounts/: actions.rs  dtos.rs  handlers.rs  mod.rs  models.rs  rustic_async.rs
src/prelude/: action_prelude.rs  mod.rs  model_prelude.rs  route_prelude.rs
src/users/: actions.rs  dtos.rs  handlers.rs  mod.rs  models.rs
