[package]
name = "neptis-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rustic_core = {version = "0.7.3" }
rustic_backend = "0.5.2"
serde = { version = "1.0.219", features = ["derive" ]}
diesel = { version = "=2.1.6", features = ["postgres", "r2d2", "uuid", "chrono"]}
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
rand = "0.9.0"
totp-rs = { version = "5.6.0", features = ["gen_secret", "serde_support"] }
rocket = { version = "0.5.1", features = ["json"] }
dotenvy = "0.15"
thiserror = "2.0.12"
paste = "1.0"
action-macro = { path = "./action-macro" }  # Adjust if necessary
fs_extra = "1.3.0"
passwords = "3.1.16"
diesel-enum = "0.2.1"
crossbeam-channel = "0.5.14"
xattr = "1.5.0"
nix = "0.29.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]